--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,52 @@
-#title {
+body {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Montserrat";
+    font-weight: 800;
+}
+
+p {
+    color: #8f8f8f;
+}
+
+/* Sections */
+
+.coloured-section{
     background-color: #ff4c68;
     color: #fff;
 }
 
-body {
+.white-section{
+    background-color: #fff;
+}
+
+/* Headings */
+
+.big-heading {
     font-family: 'Montserrat', sans-serif;
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+.section-heading {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 .container-fluid {
     padding: 3% 15% 7%;
 }
 
-h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3.5rem;
-    line-height: 1.5;
+#title {
+    text-align: left;
 }
 
 /* Navigation Bar */
@@ -61,13 +93,15 @@ h1 {
 
 #features {
     padding: 7% 12%;
-    background-color: #fff;
     position: relative;
     z-index: 1;
 }
 
+.feature-title {
+    font-size: 1.5rem;
+}
+
 .feature-box {
-    text-align: center;
     padding: 5%;
 }
 
@@ -80,27 +114,13 @@ h1 {
     color: #ff4c68;
 }
 
-h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 800;
-    font-size: 1.5rem;
-}
-
-p {
-    color: #8f8f8f;
-}
-
 /* Testimonials Section */
 
 #testimonials {
-    text-align: center;
     background-color: #ef8172;
-    color: #fff;
 }
 
-h2 {
-    font-family: "Montserrat";
-    font-weight: bold;
+.testimonial-text {
     font-size: 3rem;
     line-height: 1.5;
 }
@@ -119,7 +139,6 @@ h2 {
 
 #press {
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -132,7 +151,11 @@ h2 {
 
 #pricing {
     padding: 100px;
-    text-align: center;
+}
+
+.price-text {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 .pricing-column {
@@ -142,33 +165,23 @@ h2 {
 
 /* Call to Action */
 
-#cta{
-    color: #fff;
-    background-color: #ff4c68;
-    text-align: center;
+#cta {
     padding: 7% 15%;
-}
-
-.cta-heading{
-    font-size: 3.5rem;
-    line-height: 1.5;
 }
 
 /* Footer section */
 
-#footer{
-    background-color: #fff;
-    text-align: center;
+#footer {
     padding: 7% 15%;
 }
 
-.footer-icons{
+.footer-icons {
     margin: 20px 10px;
 }
 
 @media (max-width:1028px) {
 
-    #title{
+    #title {
         text-align: center;
     }
 
